--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,12 +17,6 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore ./src
-    - name: Build
-      run: dotnet build --no-restore ./src
-    - name: Test
-      run: dotnet test --no-build --verbosity normal ./src
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
@@ -57,4 +51,5 @@ jobs:
       run: |
         src/./.sonar/scanner/dotnet-sonarscanner begin /k:"Deveneven_TasTier" /o:"tastierteam" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
         dotnet build ./src
+        dotnet test --no-build --verbosity normal ./src
         src/./.sonar/scanner/dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
