--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,9 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "prettier": "^2.6.2",
-    "typescript": "^4.6.3"
+    "sass": "^1.50.0",
+    "sass-loader": "^12.6.0",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0"
   }
 }
