--- a/backend/TasTierAPI/appsettings.json
+++ b/backend/TasTierAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TastierDB": "Server=tcp:tastierdbserver.database.windows.net,1433;Initial Catalog=TastierDB;Persist Security Info=False;User ID=s21236;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }//TODO dodaj haslo do connection string
 }
