Login/Register/Fetch Recipe/ShoppingLists

--- a/backend/TasTierAPI/Properties/launchSettings.json
+++ b/backend/TasTierAPI/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "TasTierAPI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "/api/recipes/get",
+      "launchUrl": "/swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
