--- a/backend/TasTierAPI/appsettings.json
+++ b/backend/TasTierAPI/appsettings.json
@@ -6,8 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TastierDB": "Server=tcp:tastierdbserver.database.windows.net,1433;Initial Catalog=TastierDB;Persist Security Info=False;User ID=s21236;Password=;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  }//TODO dodaj haslo do connection string
+    "TastierDB": "Server=tcp:tastierdbserver.database.windows.net,1433;Initial Catalog=tastierDatabase;Persist Security Info=False;User ID=s21236;Password=Tastierhaslo123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
+
 }
