--- a/backend/TasTierAPI/TasTierAPI.csproj
+++ b/backend/TasTierAPI/TasTierAPI.csproj
@@ -1,4 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿
+
+
+
+
+
+
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -23,6 +30,7 @@
     <Folder Include="Middlewares\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
