--- a/backend/TasTierAPI/TasTierAPI.csproj
+++ b/backend/TasTierAPI/TasTierAPI.csproj
@@ -47,5 +47,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Remove="appsettings.Development.json" />
+    <Content Remove="appsettings.json" />
   </ItemGroup>
 </Project>
