--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.5",
     "react-dom": "^17.0.2",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.3.0",
